Adjust modal width to prevent horizontal scroll

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       }
 
       .feedback-modal.feedback-modal--wide {
-        max-width: 720px;
+        max-width: 860px;
       }
 
       .feedback-modal-title {
@@ -209,6 +209,8 @@
         color: var(--text-strong);
         max-height: 60vh;
         overflow-y: auto;
+        overflow-x: hidden;
+        word-break: break-word;
       }
 
       .feedback-modal-message > :last-child {
