--- a/sshvrpronto.html
+++ b/sshvrpronto.html
@@ -92,7 +92,7 @@
         position: relative;
         z-index: 1;
         color: #ffffff;
-        padding: 2.75rem 3rem;
+        padding: 1.75rem 1.5rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -640,6 +640,10 @@
       @media (max-width: 992px) {
         header.hero {
           height: 210px;
+        }
+
+        header.hero .hero-content {
+          padding: 1.5rem 1.1rem;
         }
 
         .wizard-shell {
