Set card border radii to 4px

--- a/sshvrpronto.html
+++ b/sshvrpronto.html
@@ -126,7 +126,7 @@
 
       .wizard-shell {
         background: var(--surface);
-        border-radius: 1.25rem;
+        border-radius: 4px;
         padding: 1.75rem 1.5rem;
         box-shadow: 0 18px 40px rgba(26, 115, 232, 0.12), 0 8px 22px rgba(26, 115, 232, 0.08);
         border: 1px solid rgba(26, 115, 232, 0.12);
@@ -305,7 +305,7 @@
 
       .step-card {
         border: 0;
-        border-radius: 1.25rem;
+        border-radius: 4px;
         overflow: hidden;
         box-shadow: 0 20px 44px rgba(15, 23, 42, 0.08);
         margin-bottom: 2.5rem;
@@ -407,7 +407,7 @@
 
       .summary-section {
         border: 1px solid rgba(26, 115, 232, 0.08);
-        border-radius: 1rem;
+        border-radius: 4px;
         padding: 1.25rem 1.5rem;
         margin-bottom: 1.25rem;
         background: #ffffff;
@@ -442,7 +442,7 @@
 
       .dropzone {
         border: 2px dashed rgba(26, 115, 232, 0.25);
-        border-radius: 1rem;
+        border-radius: 4px;
         padding: 1rem 1.25rem;
         background: rgba(232, 240, 254, 0.55);
         color: #34518a;
@@ -454,7 +454,7 @@
 
       .upload-card {
         border: 2px dashed rgba(17, 37, 82, 0.18);
-        border-radius: 1rem;
+        border-radius: 4px;
         background: rgba(255, 255, 255, 0.75);
         padding: 1.5rem 1.25rem;
         min-height: var(--upload-min-height);
@@ -542,7 +542,7 @@
         max-width: 720px;
         text-align: center;
         background: var(--surface);
-        border-radius: 1.25rem;
+        border-radius: 4px;
         padding: 3rem 2.5rem;
         box-shadow: 0 18px 40px rgba(26, 115, 232, 0.12), 0 8px 22px rgba(26, 115, 232, 0.08);
         border: 1px solid rgba(26, 115, 232, 0.12);
@@ -599,7 +599,7 @@
         background: rgba(11, 36, 71, 0.92);
         color: #ffffff;
         padding: 2.25rem 2.5rem;
-        border-radius: 1.25rem;
+        border-radius: 4px;
         text-align: center;
         box-shadow: 0 24px 48px rgba(11, 36, 71, 0.35);
         max-width: 320px;
@@ -625,7 +625,7 @@
         background: #0f5132;
         color: #fff;
         padding: 0.85rem 1.25rem;
-        border-radius: 0.75rem;
+        border-radius: 4px;
         box-shadow: 0 20px 45px rgba(15, 81, 50, 0.35);
         display: none;
         align-items: center;
