--- a/sshvrpronto.html
+++ b/sshvrpronto.html
@@ -97,6 +97,9 @@
         flex-direction: column;
         justify-content: center;
         height: 320px;
+        width: 100%;
+        max-width: 1100px;
+        margin: 0 auto;
       }
 
       .hero-badge {
@@ -644,6 +647,7 @@
 
         header.hero .hero-content {
           padding: 1.5rem 1.1rem;
+          max-width: 100%;
         }
 
         .wizard-shell {
