--- a/sshvrpronto.html
+++ b/sshvrpronto.html
@@ -57,6 +57,13 @@
         padding: 3.5rem 0 2.75rem;
       }
 
+      .hero-container {
+        max-width: 1100px;
+        margin: 0 auto;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+      }
+
       header .lead {
         color: rgba(255, 255, 255, 0.82);
         max-width: 720px;
@@ -650,6 +657,11 @@
           max-width: 100%;
         }
 
+        .hero-container {
+          padding-left: 1.1rem;
+          padding-right: 1.1rem;
+        }
+
         .wizard-shell {
           padding: 1.5rem 1.1rem;
         }
@@ -696,7 +708,7 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="container">
+      <div class="container hero-container">
         <span class="badge-open">Secretaria de Administração - SAD • Prefeitura do Recife</span>
         <h1 class="display-6 fw-semibold mt-3">Seleção Simplificada Hospital Veterinário do Recife</h1>
         <p class="lead mt-2">
