Ensure cards use 4px radii

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 
       .card {
         border-radius: 4px;
+        overflow: hidden;
       }
 
       .rounded-4 {
@@ -281,10 +282,12 @@
         border-bottom: 1px solid rgba(0, 83, 164, 0.08);
         background: linear-gradient(180deg, #ffffff 0%, #f5f8fc 100%);
         padding: 1.5rem 1.6rem 1.1rem;
+        border-radius: 4px 4px 0 0;
       }
 
       .card-programa .card-body {
         padding: 1.6rem 1.6rem 1.75rem;
+        border-radius: 0 0 4px 4px;
       }
 
       .card-programa .badge {
